<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeeklyActivity">

    <LinearLayout
        android:id="@+id/yearMonthBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053">

        <Button
            android:id="@+id/prevMonthDailyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="prevMonthDaily"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/leftArrow"
            android:textColor="#1E88E5"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYearInDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nextMothDailyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="nextMonthDaily"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/rightArrow"
            android:textColor="#1E88E5"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daily_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/yearMonthBlock"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hourRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/daily_recycler" />

</androidx.constraintlayout.widget.ConstraintLayout>